Deprecated wrapper class constructors changed to autoboxing/valueOf call